--- a/app/src/main/res/layout/list_fragment_layout.xml
+++ b/app/src/main/res/layout/list_fragment_layout.xml
@@ -14,7 +14,7 @@
         android:id="@+id/empty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:gravity="center"
         android:text="@string/empty_list_text" />
 
