--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="button_text_side_padding">10dp</dimen>
     <dimen name="button_height">40dp</dimen>
     <dimen name="button_right_margin">10dp</dimen>
+    <dimen name="test_item_total_height">180dp</dimen>
 
     <!-- Text sizes -->
     <dimen name="button_header_text_size">22sp</dimen>
